# NeuroForge_lab1

./: .gitignore  CMakeLists.txt  README.md
code/: file_import.cpp  file_import.h  fileimport.cpp  fileimport.h  main.cpp  matrix_realization.cpp  matrix_realization.h  plot.py  utils.cpp  visualization.cpp  visualization.h
data/: answerAI.csv  example.csv  example.txt  exampleLabel.csv  fileErrorExample.csv  saveExample.csv  test_save_no_labels.csv
include/: file_import.h  layer.h  matrix_realization.h  neural_network.h  utils.h  visualization.h
scripts/: nnlab.py  nnlab_py.cp313-win_amd64.pyd
src/: bindings.cpp  file_import.cpp  layer.cpp  main.cpp  matrix_realization.cpp  neural_network.cpp  utils.cpp  visualization.cpp
tests/: file_Import_tests.cpp  file_import_tests.cpp  matrix_tests.cpp  visualization_tests.cpp
